--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ h1{
 }
 .box
 {
-  background-color: grey;
+  background-color: #98a39b;
   padding:10px;
   margin:10px;
-  height: 200px;
-  border: 3px black;
+  height: 30%;
+  border: 1px black;
   float: left;
   margin-right: 20px;
   border-style: solid;
@@ -17,12 +17,30 @@ h1{
 }
 
 
-.title{
-	background-color: white;
+.title1{
+	background-color: #98dae3;
 	position: absolute;
 	top:0px;
 	right:0px;
-	border: 2px black;
+	border: 1px black;
+	border-style: solid;
+	font-size:2em;
+}
+.title2{
+	background-color: #f05469;
+	position: absolute;
+	top:0px;
+	right:0px;
+	border: 1px black;
+	border-style: solid;
+	font-size:2em;
+}
+.title3{
+	background-color: #eb98d9;
+	position: absolute;
+	top:0px;
+	right:0px;
+	border: 1px black;
 	border-style: solid;
 	font-size:2em;
 }
@@ -32,6 +50,7 @@ p{
 	padding-top: 20px;
 	padding-left: 30px;
 	padding-bottom: 20px;
+	font-size: 100%;
 }
 
 
@@ -104,7 +123,9 @@ p{
 }
 
 
-
+body{
+	background-color: #d5e0d8
+}
 
 
 
